# mmdu

./: .travis.yml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust-audit.yml  rust.yml
src/: app.rs  cli.rs  config.rs  log.rs  main.rs  mmdu.list.size  output.rs  policy.rs  usage.rs
src/usage/: depth.rs  mod.rs  ncdu.rs  total.rs
