[package]
name = "mmdu"
version = "0.5.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "disk usage for IBM Storage Scale file systems"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/mmdu"
homepage = "https://github.com/idiv-biodiversity/mmdu"
repository = "https://github.com/idiv-biodiversity/mmdu"
keywords = ["disk", "usage", "gpfs", "spectrum-scale", "storage-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
rust-version = "1.85"

[features]
log = ["dep:log", "dep:env_logger"]

[dependencies]
anyhow = "1"
bstr = "1"
bytesize = "2"
env_logger = { version = "0.11", optional = true }
libc = "0.2"
log = { version = "0.4", optional = true }
mmpolicy = { path = "../mmpolicy", features = ["clap", "log"] }
pwd-grp = "1"
tempfile = "3"

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated", "wrap_help"]

[build-dependencies]
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2"
mmpolicy = { path = "../mmpolicy", features = ["clap"] }

[dev-dependencies]
indoc = "2"

[profile.release]
lto = true
